--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,1 +1,28 @@
+# .dockerignore
 
+# Python artifacts
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+venv/
+env/
+
+# Environment variables
+.env
+
+# Docker files die je niet wilt kopiëren
+docker-compose.yml
+.dockerignore
+
+# Git
+.git/
+.gitignore
+
+# Mac OS files
+.DS_Store
+
+# VSCode files (optioneel)
+.vscode/
