--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,33 @@
-services:  # Correcte key voor de services
+version: '3.9'
+
+services:
+  # ✅ PostgreSQL container (eigen database)
+  postgres:
+    image: postgres:14
+    container_name: market_dashboard-postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - market_dashboard_network
+
+  # ✅ Redis (voor Celery)
+  redis:
+    image: redis:7
+    container_name: market_dashboard-redis
+    ports:
+      - "6379:6379"
+    restart: always
+    networks:
+      - market_dashboard_network
+
+  # ✅ Backend API (bijv. market_data_api)
   market_data_api:
     container_name: market_dashboard-market_data_api
     build: .
@@ -7,23 +36,15 @@ services:  # Correcte key voor de services
     env_file:
       - .env
     volumes:
-      - ~/.aws:/root/.aws  # ✅ AWS credentials beschikbaar maken in deze container
-      - .:/app  # ✅ Code live bijwerken in de container
-    restart: always  # ✅ Container herstarten bij crash
+      - .:/app
+    restart: always
     depends_on:
       - redis
+      - postgres
     networks:
-      - market_dashboard_network  # ✅ Specifiek netwerk toevoegen
+      - market_dashboard_network
 
-  redis:
-    image: "redis:alpine"
-    container_name: market_dashboard-redis
-    ports:
-      - "6379:6379"
-    restart: always  # ✅ Redis opnieuw starten als het crasht
-    networks:
-      - market_dashboard_network  # ✅ Specifiek netwerk toevoegen
-
+  # ✅ Celery Worker
   celery_worker:
     build: .
     container_name: market_dashboard-celery_worker
@@ -32,21 +53,14 @@ services:  # Correcte key voor de services
       - redis
       - market_data_api
     restart: always
-    environment:
-      - DB_HOST=${DB_HOST}  # Voeg de RDS-host toe als omgevingsvariabele
-      - DB_NAME=${DB_NAME}  # Gebruik de juiste DB-naam
-      - DB_USER=${DB_USER}  # Gebruik de juiste DB-gebruiker
-      - DB_PASS=${DB_PASS}  # Gebruik het wachtwoord uit .env bestand
-      - API_BASE_URL=http://market_dashboard-market_data_api:5002/api
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}  # ✅ AWS credentials expliciet toegevoegd
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_REGION=${AWS_REGION}
-      - AWS_PROFILE=default
+    env_file:
+      - .env
     volumes:
-      - .:/app  # ✅ Zorgt ervoor dat code-updates direct beschikbaar zijn in Celery
+      - .:/app
     networks:
-      - market_dashboard_network  # ✅ Specifiek netwerk toevoegen
+      - market_dashboard_network
 
+  # ✅ Celery Beat Scheduler
   celery_beat:
     build: .
     container_name: market_dashboard-celery_beat
@@ -55,24 +69,16 @@ services:  # Correcte key voor de services
       - redis
       - celery_worker
     restart: always
-    environment:
-      - DB_HOST=${DB_HOST}  # Voeg de RDS-host toe als omgevingsvariabele
-      - DB_NAME=${DB_NAME}  # Gebruik de juiste DB-naam
-      - DB_USER=${DB_USER}  # Gebruik de juiste DB-gebruiker
-      - DB_PASS=${DB_PASS}  # Gebruik het wachtwoord uit .env bestand
-      - API_BASE_URL=http://market_dashboard-market_data_api:5002/api
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}  # ✅ AWS credentials expliciet toegevoegd
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_REGION=${AWS_REGION}
-      - AWS_PROFILE=default
+    env_file:
+      - .env
     volumes:
-      - .:/app  # ✅ Zorgt ervoor dat code-updates direct beschikbaar zijn in Celery Beat
+      - .:/app
     networks:
-      - market_dashboard_network  # ✅ Specifiek netwerk toevoegen
+      - market_dashboard_network
 
 volumes:
-  db_data:  # Dit kan worden verwijderd als de lokale database wordt verwijderd
+  db_data:
 
 networks:
-  market_dashboard_network:  # ✅ Gedefinieerd netwerk
+  market_dashboard_network:
     driver: bridge
