--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,24 +1,17 @@
-# .env.example
+# === 📦 Database instellingen ===
+DB_HOST=postgres             # naam van de container in docker-compose
+DB_PORT=5432
+DB_NAME=market_dashboard
+DB_USER=dashboard_user
+DB_PASS=your-secure-password
 
-# Database settings
-DB_HOST=your-db-host
-DB_NAME=your-db-name
-DB_USER=your-db-user
-DB_PASS=your-db-pass
+# === 🔁 Celery en Redis ===
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
 
-# API base
-API_BASE_URL=http://localhost:5002/api
+# === 🧠 OpenAI instellingen (optioneel) ===
+OPENAI_API_KEY=your-openai-api-key
+AI_MODE=live                # of 'off' als je het tijdelijk wilt uitschakelen
 
-# AWS (optioneel)
-AWS_ACCESS_KEY_ID=your-aws-key-id
-AWS_SECRET_ACCESS_KEY=your-aws-secret
-AWS_REGION=your-aws-region
-AWS_PROFILE=default
-
-# Redis (voor Celery)
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
-
-# OpenAI
-OPENAI_API_KEY=your-openai-key
-AI_MODE=live
+# === 🌐 API base URL (voor Celery intern gebruik) ===
+API_BASE_URL=http://market_dashboard-market_data_api:5002/api
