--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,20 @@
-# === 📦 Database instellingen ===
-DB_HOST=postgres             # naam van de container in docker-compose
+# === 📦 Database (extern of Oracle Cloud Free Tier) ===
+DB_HOST=<EXTERNE_DB_HOST>         # Bijvoorbeeld: 123.45.67.89 of db.example.com
 DB_PORT=5432
 DB_NAME=market_dashboard
 DB_USER=dashboard_user
 DB_PASS=your-secure-password
 
-# === 🔁 Celery en Redis ===
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+# === 🔁 Redis (extern of lokale installatie op server) ===
+CELERY_BROKER_URL=redis://<EXTERNE_REDIS_HOST>:6379/0   # Bijvoorbeeld: 127.0.0.1 of redis.example.com
+CELERY_RESULT_BACKEND=redis://<EXTERNE_REDIS_HOST>:6379/0
 
-# === 🧠 OpenAI instellingen (optioneel) ===
+# === 🧠 OpenAI instellingen ===
 OPENAI_API_KEY=your-openai-api-key
-AI_MODE=live                # of 'off' als je het tijdelijk wilt uitschakelen
+AI_MODE=live
 
-# === 🌐 API base URL (voor Celery intern gebruik) ===
-API_BASE_URL=http://market_dashboard-market_data_api:5002/api
+# === 🌐 API base URL (voor Celery & interne comms) ===
+API_BASE_URL=http://localhost:5002/api
+
+# 🧪 Debug info uitschakelen
+LOG_LEVEL=info
