--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,17 @@
-# === 📦 Database (Docker PostgreSQL container) ===
-DB_HOST=postgres
+# === 📦 PostgreSQL (extern bereikbaar vanaf backend) ===
+DB_HOST=localhost
+DB_PORT=5432
 DB_NAME=market_dashboard
 DB_USER=dashboard_user
 DB_PASS=strong_password_here
 
-# === 🌐 API URL (voor intern gebruik binnen Docker netwerk) ===
-API_BASE_URL=http://market_dashboard-market_data_api:5002/api
+# === 🌐 API base URL — publiek IP van je backend-server (gebruik je ook in frontend) ===
+API_BASE_URL=http://143.47.186.148:5002/api
 
-# === ⚙️ Redis instellingen voor Celery ===
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+# === ⚙️ Redis (ook lokaal op de server, tenzij extern gehost) ===
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
-# === 🔐 OpenAI (verplicht voor AI-functies) ===
+# === 🔐 OpenAI API key ===
 OPENAI_API_KEY=your-real-openai-key
 AI_MODE=live
