--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,16 @@
-# === 📦 PostgreSQL (extern bereikbaar vanaf backend) ===
-DB_HOST=localhost
+# === 📦 PostgreSQL (via IP of localhost op de server) ===
+DB_HOST=127.0.0.1            # ✅ lokaal op dezelfde server, voorkom DNS-resolutie
 DB_PORT=5432
 DB_NAME=market_dashboard
 DB_USER=dashboard_user
 DB_PASS=strong_password_here
 
-# === 🌐 API base URL — publiek IP van je backend-server (gebruik je ook in frontend) ===
-API_BASE_URL=http://143.47.186.148:5002/api
+# === 🌐 API base URL (voor interne communicatie, bv. door Celery) ===
+API_BASE_URL=http://127.0.0.1:5002/api    # ✅ lokaal aanspreekbaar voor backend-taken
 
-# === ⚙️ Redis (ook lokaal op de server, tenzij extern gehost) ===
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
+# === ⚙️ Redis (lokaal draaiend op dezelfde server) ===
+CELERY_BROKER_URL=redis://127.0.0.1:6379/0
+CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
 
 # === 🔐 OpenAI API key ===
 OPENAI_API_KEY=your-real-openai-key
