--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,20 @@
-# === 📦 Database (extern of Oracle Cloud Free Tier) ===
-DB_HOST=<EXTERNE_DB_HOST>         # Bijvoorbeeld: 123.45.67.89 of db.example.com
+# === 📦 PostgreSQL (extern of Oracle Cloud) ===
+DB_HOST=143.47.186.148
 DB_PORT=5432
 DB_NAME=market_dashboard
 DB_USER=dashboard_user
 DB_PASS=your-secure-password
 
-# === 🔁 Redis (extern of lokale installatie op server) ===
-CELERY_BROKER_URL=redis://<EXTERNE_REDIS_HOST>:6379/0   # Bijvoorbeeld: 127.0.0.1 of redis.example.com
-CELERY_RESULT_BACKEND=redis://<EXTERNE_REDIS_HOST>:6379/0
+# === 🔁 Redis (extern of lokaal op je server) ===
+CELERY_BROKER_URL=redis://143.47.186.148:6379/0
+CELERY_RESULT_BACKEND=redis://143.47.186.148:6379/0
 
 # === 🧠 OpenAI instellingen ===
 OPENAI_API_KEY=your-openai-api-key
 AI_MODE=live
 
-# === 🌐 API base URL (voor Celery & interne comms) ===
-API_BASE_URL=http://localhost:5002/api
+# === 🌐 API base URL (voor interne backend-comm tussen Celery & FastAPI) ===
+API_BASE_URL=http://143.47.186.148:5002/api
 
-# 🧪 Debug info uitschakelen
+# === 🧪 Logging niveau (optioneel) ===
 LOG_LEVEL=info
