--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -19,14 +19,15 @@ jobs:
       - name: 📦 Checkout code
         uses: actions/checkout@v3
 
-      - name: 🚀 SSH en draai deploy-backend.sh op server
+      - name: 🚀 SSH en draai deploy-backend.sh op server + restart
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.HOST }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          # Alleen nodig als je poort anders is dan 22:
-          # port: ${{ secrets.PORT }}
           script: |
             echo "🎯 Start remote deployment..."
             bash ~/trading-tool-backend/deploy-backend.sh
+
+            echo "♻️ PM2 restart backend..."
+            pm2 restart backend
