--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -19,7 +19,7 @@ jobs:
       - name: 📦 Checkout code
         uses: actions/checkout@v3
 
-      - name: 🚀 SSH en draai deploy-backend.sh op server + restart
+      - name: 🚀 SSH en draai deploy-backend.sh op server
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.HOST }}
@@ -30,4 +30,6 @@ jobs:
             bash ~/trading-tool-backend/deploy-backend.sh
 
             echo "♻️ PM2 restart backend..."
+            export PATH=$PATH:/home/ubuntu/.nvm/versions/node/v18.20.8/bin
             pm2 restart backend
+            
