--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ DB_HOST=127.0.0.1            # ✅ lokaal op dezelfde server, voorkom DNS-resolu
 DB_PORT=5432
 DB_NAME=market_dashboard
 DB_USER=dashboard_user
-DB_PASS=Welkom1
+DB_PASSWORD=GVG_88_database
 
 # === 🌐 API base URL (voor interne communicatie, bv. door Celery) ===
 API_BASE_URL=http://127.0.0.1:5002/api    # ✅ lokaal aanspreekbaar voor backend-taken
