--- a/backend/.env
+++ b/backend/.env
@@ -14,7 +14,7 @@ CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
 
 # === 🔐 OpenAI API key ===
 OPENAI_API_KEY=your-real-openai-key
-AI_MODE=live
+AI_MODE=mock
 
 # === 📈 Market Data (CoinGecko) ===
 COINGECKO_URL=https://api.coingecko.com/api/v3/coins/{id}/ohlc?vs_currency=usd&days=1
