--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,12 @@
 # === 📦 PostgreSQL (via IP of localhost op de server) ===
-DB_HOST=143.47.186.148           # ✅ lokaal op dezelfde server, voorkom DNS-resolutie
+DB_HOST=143.47.186.148
 DB_PORT=5432
 DB_NAME=market_dashboard
 DB_USER=dashboard_user
 DB_PASS=GVG_88_database
 
 # === 🌐 API base URL (voor interne communicatie, bv. door Celery) ===
-API_BASE_URL=http://127.0.0.1:5002/api    # ✅ lokaal aanspreekbaar voor backend-taken
+API_BASE_URL=http://127.0.0.1:5002/api
 
 # === ⚙️ Redis (lokaal draaiend op dezelfde server) ===
 CELERY_BROKER_URL=redis://127.0.0.1:6379/0
@@ -19,4 +19,4 @@ AI_MODE=mock
 # === 📈 Market Data (CoinGecko) ===
 COINGECKO_URL=https://api.coingecko.com/api/v3/coins/{id}/ohlc?vs_currency=usd&days=1
 VOLUME_URL=https://api.coingecko.com/api/v3/coins/{}/?localization=false
-ASSETS_JSON={"BTC": "bitcoin", "ETH": "ethereum", "SOL": "solana"}
+ASSETS_JSON='{"BTC": "bitcoin"}'
