--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -21,7 +21,16 @@ jobs:
       - name: 📦 Checkout code
         uses: actions/checkout@v3
 
-      - name: 🚀 SSH en draai deploy-backend.sh op server
+      - name: 📤 Upload nieuwste deploy-backend.sh naar server
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "deploy-backend.sh"
+          target: "~/trading-tool-backend/"
+
+      - name: 🚀 SSH en voer script uit
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.HOST }}
@@ -29,7 +38,6 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "🎯 Start remote deployment..."
-            cd ~/trading-tool-backend
-            git pull origin main
-            bash deploy-backend.sh
+            chmod +x ~/trading-tool-backend/deploy-backend.sh
+            bash ~/trading-tool-backend/deploy-backend.sh
             echo "✅ Deploy afgerond"
