--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -18,21 +18,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📦 Checkout volledige repo (inclusief deploy-backend.sh)
+      - name: 📦 Checkout code
         uses: actions/checkout@v3
-        with:
-          path: backend  # Zorg dat pad klopt
 
-      - name: 📤 Upload nieuwste deploy-backend.sh naar server
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.HOST }}
-          username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "backend/deploy-backend.sh"  # <-- Correct pad gebruiken
-          target: "~/trading-tool-backend/"
-
-      - name: 🚀 SSH en voer script uit
+      - name: 🚀 SSH en draai deploy-backend.sh op server
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.HOST }}
@@ -40,6 +29,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "🎯 Start remote deployment..."
-            chmod +x ~/trading-tool-backend/deploy-backend.sh
-            bash ~/trading-tool-backend/deploy-backend.sh
+            cd ~/trading-tool-backend
+            git pull origin main
+            bash deploy-backend.sh
             echo "✅ Deploy afgerond"
