--- a/backend/.env
+++ b/backend/.env
@@ -19,4 +19,4 @@ AI_MODE=mock
 # === 📈 Market Data (CoinGecko) ===
 COINGECKO_URL=https://api.coingecko.com/api/v3/coins/{id}/ohlc?vs_currency=usd&days=1
 VOLUME_URL=https://api.coingecko.com/api/v3/coins/{}/?localization=false
-ASSETS_JSON={"BTC": "bitcoin"}
+ASSETS_JSON='{"BTC": "bitcoin"}'
