--- a/backend/config/market_data_config.json
+++ b/backend/config/market_data_config.json
@@ -14,5 +14,13 @@
     "correlation": "positief",
     "explanation": "De procentuele prijsverandering op 24h basis.",
     "action": "Sterke stijging duidt op momentum. Negatief is vaak correctie of paniek."
+  },
+  "volume": {
+    "thresholds": [5000000000, 10000000000, 15000000000],
+    "positive": true,
+    "category": "market",
+    "correlation": "positief",
+    "explanation": "Het volume in USD is een maatstaf voor interesse en bevestiging.",
+    "action": "Hoog volume kan beweging bevestigen. Laag volume wijst op twijfel."
   }
 }
