--- a/backend/config/market_data_config.json
+++ b/backend/config/market_data_config.json
@@ -1,26 +1,33 @@
 {
-  "price": {
-    "thresholds": [25000, 35000, 45000],
-    "positive": true,
-    "category": "market",
-    "correlation": "positief",
-    "explanation": "Prijsniveau van BTC bepaalt veel marktsentiment.",
-    "action": "Hogere prijs wijst op sterkte. Lagere prijs kan koopkans zijn."
+  "coingecko_url": "https://api.coingecko.com/api/v3/coins/{id}/ohlc?vs_currency=usd&days=1",
+  "volume_url": "https://api.coingecko.com/api/v3/coins/{id}",
+  "assets": {
+    "BTC": "bitcoin"  
   },
-  "change_24h": {
-    "thresholds": [-5, 0, 5],
-    "positive": true,
-    "category": "market",
-    "correlation": "positief",
-    "explanation": "De procentuele prijsverandering op 24h basis.",
-    "action": "Sterke stijging duidt op momentum. Negatief is vaak correctie of paniek."
-  },
-  "volume": {
-    "thresholds": [5000000000, 10000000000, 15000000000],
-    "positive": true,
-    "category": "market",
-    "correlation": "positief",
-    "explanation": "Het volume in USD is een maatstaf voor interesse en bevestiging.",
-    "action": "Hoog volume kan beweging bevestigen. Laag volume wijst op twijfel."
+  "indicators": {
+    "price": {
+      "thresholds": [25000, 35000, 45000],
+      "positive": true,
+      "category": "market",
+      "correlation": "positief",
+      "explanation": "Prijsniveau van BTC bepaalt veel marktsentiment.",
+      "action": "Hogere prijs wijst op sterkte. Lagere prijs kan koopkans zijn."
+    },
+    "change_24h": {
+      "thresholds": [-5, 0, 5],
+      "positive": true,
+      "category": "market",
+      "correlation": "positief",
+      "explanation": "De procentuele prijsverandering op 24h basis.",
+      "action": "Sterke stijging duidt op momentum. Negatief is vaak correctie of paniek."
+    },
+    "volume": {
+      "thresholds": [5000000000, 10000000000, 15000000000],
+      "positive": true,
+      "category": "market",
+      "correlation": "positief",
+      "explanation": "Het volume in USD is een maatstaf voor interesse en bevestiging.",
+      "action": "Hoog volume kan beweging bevestigen. Laag volume wijst op twijfel."
+    }
   }
 }
