--- a/backend/config/technical_indicators_config.json
+++ b/backend/config/technical_indicators_config.json
@@ -3,7 +3,7 @@
     "binance": "https://api.binance.com/api/v3/klines?symbol={symbol}&interval=1d&limit=300"
   },
   "indicators": {
-    "RSI": {
+    "rsi": {
       "symbol": "BTCUSDT",
       "source": "binance",
       "thresholds": [30, 50, 70],
@@ -13,7 +13,7 @@
       "explanation": "RSI geeft overbought of oversold situaties aan.",
       "action": "Bij RSI < 30 is er vaak sprake van een koopmoment. RSI > 70 duidt op oververhitting."
     },
-    "Volume": {
+    "volume": {
       "symbol": "BTCUSDT",
       "source": "binance",
       "thresholds": [1000, 2500, 5000],
@@ -23,7 +23,7 @@
       "explanation": "Hoger volume bevestigt de richting van een trend.",
       "action": "Stijgend volume = bevestiging van momentum. Laag volume = twijfel."
     },
-    "200MA": {
+    "ma_200": {
       "symbol": "BTCUSDT",
       "source": "binance",
       "thresholds": [0.95, 1.0, 1.05],
