--- a/backend/.env
+++ b/backend/.env
@@ -20,3 +20,6 @@ AI_MODE=mock
 COINGECKO_URL=https://api.coingecko.com/api/v3/coins/{id}/ohlc?vs_currency=usd&days=1
 VOLUME_URL=https://api.coingecko.com/api/v3/coins/{}/?localization=false
 ASSETS_JSON='{"BTC": "bitcoin"}'
+
+# === 📊 Alpha Vantage (voor macro-data fallback) ===
+ALPHA_VANTAGE_API_KEY=OT75ABX37EM45NA6
